# intelligent-multi-model-router

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: models.yaml
configs/docker/: models.yaml  policies.yaml
src/multirouter/: __init__.py  analysis.py  api.py  backend.py  config.py  domain.py  metrics.py  mock_backend.py  registry.py  schemas.py  service.py
src/multirouter/routing/: __init__.py  base.py  constraints.py  rule.py  utility.py
tests/: conftest.py  test_analysis.py  test_api.py  test_router.py  test_service.py
