[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-multi-model-router"
version = "0.1.0"
description = "SLA-aware, explainable routing across heterogeneous AI model endpoints."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Project Author"}]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "PyYAML>=6.0,<7.0",
  "prometheus-client>=0.21,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10.0",
  "pytest-asyncio>=0.24,<2.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
]

[project.scripts]
multirouter = "multirouter.api:run"
multirouter-mock = "multirouter.mock_backend:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["multirouter"]
